- batch td algorithm now are only for dense state - mountain car batch test with gaussian processes added

--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -9,11 +9,14 @@ target_link_libraries(nls_off rele)
 add_executable(portfolio_off PortfolioBatchTest.cpp)
 target_link_libraries(portfolio_off rele)
 
-add_executable(forex ForexTest.cpp)
-target_link_libraries(forex rele)
+#add_executable(forex ForexTest.cpp)
+#target_link_libraries(forex rele)
 
-add_executable(gridFQI GridFQITest.cpp)
-target_link_libraries(gridFQI rele)
+#add_executable(gridFQI GridFQITest.cpp)
+#target_link_libraries(gridFQI rele)
+
+add_executable(mc_GPFQI McGPFQITest.cpp)
+target_link_libraries(mc_GPFQI rele)
 
 add_executable(mc_LSPI McLSPITest.cpp)
 target_link_libraries(mc_LSPI rele)
