corrections in gp fqi policy test

--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -12,5 +12,5 @@ target_link_libraries(portfolio_off rele)
 add_executable(mc_LSPI McLSPITest.cpp)
 target_link_libraries(mc_LSPI rele)
 
-add_executable(FQI_policy FQIPolicyTest.cpp)
-target_link_libraries(FQI_policy rele)
+add_executable(GPFQI_policy GP-FQIPolicyTest.cpp)
+target_link_libraries(GPFQI_policy rele)
