--- a/rele/test/IRL/CMakeLists.txt
+++ b/rele/test/IRL/CMakeLists.txt
@@ -5,6 +5,9 @@ add_executable(test_hessian_gradient TestGradientHess.cpp)
 target_link_libraries(test_hessian_gradient rele)
 
 #NIPS
+add_executable(nips_lqr_comp nips/LQR_comp.cpp)
+target_link_libraries(nips_lqr_comp rele)
+
 add_executable(nips_lqr_map nips/LQR_MAP.cpp)
 target_link_libraries(nips_lqr_map rele)
 
