Renamed Batch test
- changed name: is not a mountain car anymore

--- a/rele/test/Batch/CMakeLists.txt
+++ b/rele/test/Batch/CMakeLists.txt
@@ -9,5 +9,5 @@ target_link_libraries(nls_off rele)
 add_executable(portfolio_off PortfolioBatchTest.cpp)
 target_link_libraries(portfolio_off rele)
 
-add_executable(mc_batch McBatchTest.cpp)
-target_link_libraries(mc_batch rele)
+add_executable(car_batch CarOnHillBatchTest.cpp)
+target_link_libraries(car_batch rele)
