Added Segway test
- learning policy
- to complete

--- a/rele/test/IRL/CMakeLists.txt
+++ b/rele/test/IRL/CMakeLists.txt
@@ -32,6 +32,10 @@ target_link_libraries(nips_nls rele)
 add_executable(nips_nls_fe nips/NLS_FE.cpp)
 target_link_libraries(nips_nls_fe rele)
 
+add_executable(nips_segway nips/Segway.cpp)
+target_link_libraries(nips_segway rele)
+
+
 #MWAL
 add_executable(simple_chain_MWAL MWAL/SimpleChainMWAL.cpp)
 target_link_libraries(simple_chain_MWAL rele)
