--- a/rele/test/IRL/CMakeLists.txt
+++ b/rele/test/IRL/CMakeLists.txt
@@ -11,6 +11,9 @@ target_link_libraries(nips_car rele)
 add_executable(nips_ship nips/Ship.cpp)
 target_link_libraries(nips_ship rele)
 
+add_executable(nips_ship_mle nips/Ship_MLE.cpp)
+target_link_libraries(nips_ship_mle rele)
+
 add_executable(nips_lqr_comp nips/LQR_comp.cpp)
 target_link_libraries(nips_lqr_comp rele)
 
