Restored old configuration

--- a/rele/CMakeLists.txt
+++ b/rele/CMakeLists.txt
@@ -29,14 +29,14 @@ endif()
 
 find_package(Armadillo REQUIRED)
 find_package(NLopt REQUIRED)
-# set(Boost_USE_STATIC_LIBS        OFF)
-# set(Boost_USE_MULTITHREADED      ON)
-# set(Boost_USE_STATIC_RUNTIME     OFF)
+set(Boost_USE_STATIC_LIBS        OFF)
+set(Boost_USE_MULTITHREADED      ON)
+set(Boost_USE_STATIC_RUNTIME     OFF)
 # set (Boost_NO_SYSTEM_PATHS ON)
-set (Boost_USE_MULTITHREADED ON)
-set (Boost_USE_STATIC_LIBS ON)
-set (Boost_USE_STATIC_RUNTIME OFF)
-set (BOOST_ALL_DYN_LINK OFF)
+# set (Boost_USE_MULTITHREADED ON)
+# set (Boost_USE_STATIC_LIBS ON)
+# set (Boost_USE_STATIC_RUNTIME OFF)
+# set (BOOST_ALL_DYN_LINK OFF)
 find_package(Boost 1.53 COMPONENTS system timer program_options REQUIRED)
 if(Boost_FOUND)
     include_directories(${Boost_INCLUDE_DIRS})
