Implemented rosbag interface, folder refactoring
- implemented a rosbag interface into rele_ros
- implemented the interface for simple data topics (most of std_msgs)
- need to be tested
- refactoring of test folder in rele_ros
- astyle

--- a/rele_ros/CMakeLists.txt
+++ b/rele_ros/CMakeLists.txt
@@ -65,9 +65,7 @@ target_link_libraries(releROS ${catkin_LIBRARIES})
 add_dependencies(releROS ${catkin_EXPORTED_TARGETS})
 
 #releROS test
-
-add_executable(rrbot_test test/RRBotTest.cpp)
-target_link_libraries(rrbot_test releROS ${catkin_LIBRARIES})
+add_subdirectory(test)
 
 
 # ------------------------ INSTALLATION ------------------------
