--- a/rele_ros/test/emotions/CMakeLists.txt
+++ b/rele_ros/test/emotions/CMakeLists.txt
@@ -1,3 +1,3 @@
 #Emotions learning tests
-add_executable(emotions Emotions.cpp)
+add_executable(emotions Emotions.cpp CompressedPolicy.cpp)
 target_link_libraries(emotions releROS ${catkin_LIBRARIES})
