Added emotion classification test

--- a/rele_ros/test/emotions/CMakeLists.txt
+++ b/rele_ros/test/emotions/CMakeLists.txt
@@ -1,3 +1,6 @@
 #Emotions learning tests
 add_executable(emotions Emotions.cpp CompressedPolicy.cpp)
 target_link_libraries(emotions releROS ${catkin_LIBRARIES})
+
+add_executable(emotions_classification EmotionsClassification.cpp)
+target_link_libraries(emotions_classification releROS ${catkin_LIBRARIES})
