Work on WaterResources Test
- Added PG test
- Added setCovariancer to ParametricNormal
- Some changes in the BBO test

--- a/rele/test/PG/CMakeLists.txt
+++ b/rele/test/PG/CMakeLists.txt
@@ -22,3 +22,6 @@ target_link_libraries(pursuer_PG rele)
 
 add_executable(taxi_PG TaxiFuelPGTest.cpp)
 target_link_libraries(taxi_PG rele)
+
+add_executable(water_PG WaterResourcesPGTest.cpp)
+target_link_libraries(water_PG rele)
