Added features extraction executables

--- a/rele_ros/test/emotions/CMakeLists.txt
+++ b/rele_ros/test/emotions/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(emotions_classification releROS ${catkin_LIBRARIES})
 
 add_executable(emotions_performances EmotionPerformances.cpp)
 target_link_libraries(emotions_performances releROS ${catkin_LIBRARIES})
+
+add_executable(emotions_features EmotionsFeatures.cpp)
+target_link_libraries(emotions_features releROS ${catkin_LIBRARIES})
