--- a/rele_ros/test/emotions/CMakeLists.txt
+++ b/rele_ros/test/emotions/CMakeLists.txt
@@ -2,11 +2,8 @@
 add_executable(emotions Emotions.cpp CompressedPolicy.cpp)
 target_link_libraries(emotions releROS ${catkin_LIBRARIES})
 
-add_executable(emotions_classification EmotionsClassification.cpp)
-target_link_libraries(emotions_classification releROS ${catkin_LIBRARIES})
-
-add_executable(emotions_performances EmotionPerformances.cpp)
-target_link_libraries(emotions_performances releROS ${catkin_LIBRARIES})
-
 add_executable(emotions_features EmotionsFeatures.cpp)
 target_link_libraries(emotions_features releROS ${catkin_LIBRARIES})
+
+add_executable(emotions_generator EmotionsGenerator.cpp)
+target_link_libraries(emotions_generator releROS ${catkin_LIBRARIES})
