Added emotions executor file

--- a/rele_ros/test/emotions/CMakeLists.txt
+++ b/rele_ros/test/emotions/CMakeLists.txt
@@ -7,3 +7,6 @@ target_link_libraries(emotions_features releROS ${catkin_LIBRARIES})
 
 add_executable(emotions_generator EmotionsGenerator.cpp)
 target_link_libraries(emotions_generator releROS ${catkin_LIBRARIES})
+
+add_executable(emotions_runner EmotionsRunner.cpp)
+target_link_libraries(emotions_runner releROS ${catkin_LIBRARIES})
